fix overflow product of week slider

--- a/src/sass/media.scss
+++ b/src/sass/media.scss
@@ -113,11 +113,11 @@
     padding-right: 1%;
   }
   .products-of-week__prev {
-    left: calc((100% - 1140px) / 2);
+    left: calc((100% - 1100px) / 2);
   }
 
   .products-of-week__next {
-    right: calc((100% - 1140px) / 2);
+    right: calc((100% - 1100px) / 2);
   }
   .product-of-week__image {
     min-width: 56%;
